working on employee view, improved behavior/appearance for stuff when it's nil, and found some issues with authentication and employees access to shift details

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -122,9 +122,6 @@ body {
 				text-align: left;
 			}
 		}
-		.nil-message {
-			.prettybox;
-		}
 		.dataTables_wrapper {
 			margin-top: 1em;
 			margin-bottom: 4em;
