--- a/app/assets/stylesheets/dashboards.less
+++ b/app/assets/stylesheets/dashboards.less
@@ -18,7 +18,8 @@
 	.employee-details,
 	.incomplete-shifts,
 	.store-employees,
-	.shifts-calendar {
+	.shifts-calendar,
+	.nil-message {
 		.prettybox;
 		margin-bottom: 1em;
 	}
@@ -37,7 +38,7 @@
 	.shifts {
 		margin-left: 0;
 	}
-	.past-shifts {
+	.past-shifts, .upcoming-shifts, .nil-message {
 		padding: 2em 2em;
 	}
 	.employee-details {
